Resolves: fdo#47865 insertions into deque invalidate nLastCount